# seo-ops-command-center

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: seo-ops-public-roadmap.md  user-manual.md
examples/: sftp-cpanel-site.yaml
src/seo_ops/: __init__.py  cli.py
src/seo_ops/config/: __init__.py  loader.py  schema.py
src/seo_ops/core/: __init__.py  findings.py  fix_queue.py  redaction.py  reporting.py
src/seo_ops/providers/: gsc_exports.py
tests/: test_cli.py  test_config.py  test_fix_queue.py  test_gsc_exports.py  test_redaction.py
